--- a/blocks/code-snippet/code-snippet.css
+++ b/blocks/code-snippet/code-snippet.css
@@ -1,4 +1,4 @@
-pre[class*="language-"] {
+div pre {
   position: relative;
   margin: 5px 0 ;
   padding: 1.75rem 0 1.75rem 1rem;
@@ -6,7 +6,7 @@ pre[class*="language-"] {
   /* more stuff */
 }
 
-div[class*="language-"] pre button{
+div pre button{
   position: absolute;
   top: 5px;
   right: 5px;
