--- a/blocks/code-snippet/code-snippet.css
+++ b/blocks/code-snippet/code-snippet.css
@@ -1,9 +1,17 @@
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
 div pre {
   position: relative;
-  margin: 5px 0 ;
-  padding: 1.75rem 0 1.75rem 1rem;
+  overflow: auto;
 
-  /* more stuff */
+  /* make space  */
+  margin: 5px 0;
+  padding: 1.75rem 0 1.75rem 1rem;
+  border-radius: 10px;
 }
 
 div pre button{
@@ -11,5 +19,18 @@ div pre button{
   top: 5px;
   right: 5px;
 
+  font-size: 0.9rem;
+  padding: 0.15rem;
+  background-color: #828282;
+
+  border: ridge 1px #7b7b7c;
+  border-radius: 5px;
+  text-shadow: #c4c4c4 0 0 2px;
+
   /* more stuff */
+}
+
+div pre button:hover {
+  cursor: pointer;
+  background-color: #bcbabb;
 }
