--- a/blocks/code-snippet/code-snippet.css
+++ b/blocks/code-snippet/code-snippet.css
@@ -34,3 +34,14 @@ div pre button:hover {
   cursor: pointer;
   background-color: #bcbabb;
 }
+
+div pre button::after {
+  
+  font-size: 0.9rem;
+  padding: 0.15rem;
+  background-color: #828282;
+
+  border: ridge 1px #7b7b7c;
+  border-radius: 5px;
+  text-shadow: #c4c4c4 0 0 2px;
+}
