--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -266,3 +266,7 @@ header nav .nav-sections ul > li > ul > li {
 header nav .nav-tools {
   grid-area: tools;
 }
+
+header nav[class='breadcumbs']{
+  padding: 0px 0;
+}
