--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,11 +13,11 @@
 :root {
   /* colors */
   --background-color: #090D1F;
-  --light-color: #f8f8f8;
-  --dark-color: #505050;
-  --text-color: #131313;
-  --link-color: #3b63fb;
-  --link-hover-color: #1d3ecf;
+  --light-color: #f8f4e1;
+  --dark-color: #434141;
+  --text-color: #FFFFFF;
+  --link-color: #fbcb3b;
+  --link-hover-color: #b31b1b;
 
   /* fonts */
   --body-font-family: roboto, roboto-fallback, sans-serif;
