--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -12,6 +12,7 @@
     padding: 0 var(--spacing-xl);
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 14px;
 }
 
